--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ h1 {
 
 #authContainer{
     display: flex;
-    height: 450px;
     align-items: center;
     justify-content: center;
 }
@@ -71,8 +70,23 @@ h1 {
     word-break: break-all;
 }
 
+.qr-section {
+    margin-top: 20px;
+    border-bottom: 1px solid #534D3D;
+    padding-bottom: 20px;
+}
 
+.qr-section h2 {
+    color: #534D3D;
+    font-size: 25px;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+}
 
+#qrcode {
+    margin: auto;
+    width: fit-content;
+}
 
 .mining-section{
     padding-left: 10px;
@@ -106,7 +120,9 @@ h1 {
     background-color: #534D3D;
 }
 
-
+.btn-scan{
+    background-color: #28a745;
+}
 
 .transaction-section h2{
     color: #534D3D;
@@ -123,4 +139,43 @@ h1 {
     border: 1px solid #534D3D;
     border-radius: 5px;
     font-size: 16px;
+}
+
+.qr-scanner {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.qr-scanner h2 {
+    color: #534D3D;
+    font-size: 25px;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+}
+
+.transaction-history-section {
+    margin-top: 20px;
+    text-align: left;
+}
+
+.transaction-history-section h2 {
+    color: #534D3D;
+    font-size: 25px;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+}
+
+#transactionHistory {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+#transactionHistory th,
+#transactionHistory td {
+    padding: 8px;
+    border: 1px solid #534D3D;
+}
+
+#transactionHistory th {
+    background-color: #f0f0f0;
 }
